syntax = "proto3";

import "google/protobuf/timestamp.proto";

package go_auth.service.v1;
option go_package = "./pb";

message Empty {}

message DefaultResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
}

message RegisterUserRequest {
  string name = 1;
  string password = 2;
}

message LoginUserRequest {
  string name = 1;
  string password = 2;
}

message LoginUserResponse {
  bool error = 1;
  uint32 code = 2;
  string message = 3;
  string access_token = 4;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  uint64 id = 1;
  string name = 2;
  string password = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}